--- a/ui.frontend/src/main/webpack/site/_variables.scss
+++ b/ui.frontend/src/main/webpack/site/_variables.scss
@@ -91,28 +91,35 @@ $button-font-weight: 600;
 $button-padding: 20px;
 $button-margin: 20px;
 
+@mixin buttonDefault {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-decoration: none;
+}
+
 @mixin buttonStyles($bgColor, $borderColor) {
+  text-align: center;
+  display: flex;
+  font-weight: 600;
+  width: fit-content;
+  height: 80px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  margin: 20px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+
   @if ($bgColor & $borderColor) {
     background-color: $bgColor;
     border: 2px solid $borderColor;
   } @else {
-    @error "PLEASE PROVIDE ARGUMENTS FOR #{$bgColor} AND #{$borderColor}";
+    @error "PLEASE PROVIDE ARGUMENTS FOR #{$bgColor} #{$borderColor}";
   }
 }
 
 @mixin buttonStylesText($fontColor) {
   font-size: $button-font-size;
   color: $fontColor;
-
-  @include breakpoint(medium) {
-    font-size: 14px;
-  }
-}
-
-@mixin hoverStyles($bg-color, $borderColor, $fontColor) {
-  background-color: invert($bg-color);
-  border: 2px solid invert($borderColor);
-  color: invert($fontColor);
-  transform: translate(5px, 5px);
-  box-shadow: -10px -10px 10px invert(black);
 }
